tests/bad/value_enums/constructor_unnamed_label.oc
/// fail: Unknown labelled argument `foo`

enum Foo {
    Case0(num: u32)
    Case1(y: str, x: i32)
    Case2(y: str)
    Case3
}

def main() {
    let foo: Foo = Case0(foo: 5)
}